# urw

./: LICENSE
aur/: .SRCINFO  .gitignore  PKGBUILD  steps_to_create_aur_package
pip/: .gitignore  README.md  setup.cfg  setup.py  urw.py
pip/urw/: urw.py  wordlist.txt
