[metadata]
name = urw
version = 0.0.1
author = siphr
author_email = pypi@techtum.dev
description = Urdu Random Words Generator.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.techtum.dev/work-urw-220310.html
license = MIT
project_urls =
    Bug Tracker = https://github.com/siphr/urw/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
[options.package_data]
* = wordlist.txt
packages = find:
py_modules = urw
python_requires = >=3.6
